# tApm

./: README.md  gradle.properties  settings.gradle.kts
aosp/: CpuPowerCalculator.java  CpuProfile.java  PowerCalculator.java  PowerProfile.java  PowerProfile2.java  ScreenPowerCalculator.java  power_profile.xml
demo/: build.gradle.kts
demo/src/androidTest/java/com/tans/tapm/demo/: ExampleInstrumentedTest.kt
demo/src/androidTest/java/com/tans/tpowercalculator/demo/: ExampleInstrumentedTest.kt
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/tans/tapm/demo/: App.kt  AppLog.kt  MainActivity.kt
demo/src/main/java/com/tans/tpowercalculator/demo/: App.kt  AppLog.kt  MainActivity.kt
demo/src/main/res/layout/: main_activity.xml
demo/src/main/res/values/: strings.xml  themes.xml
demo/src/main/res/values-night/: themes.xml
demo/src/test/java/com/tans/tapm/demo/: ExampleUnitTest.kt
demo/src/test/java/com/tans/tpowercalculator/demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tapm/: build.gradle.kts
tapm-autoinit/: build.gradle.kts
tapm-autoinit/src/androidTest/java/com/tans/tlog/tapm/autoinit/: ExampleInstrumentedTest.kt
tapm-autoinit/src/main/: AndroidManifest.xml
tapm-autoinit/src/main/java/com/tans/tapm/autoinit/: AutoInit.kt  tApmAutoInit.kt
tapm-autoinit/src/test/java/com/tans/tlog/tapm/autoinit/: ExampleUnitTest.kt
tapm-breakpad/: build.gradle.kts
tapm-breakpad/src/androidTest/java/com/tans/tlog/breakpad/: ExampleInstrumentedTest.kt
tapm-breakpad/src/main/cpp/: CMakeLists.txt  jni.cpp
tapm-breakpad/src/main/cpp/crash/: crash.cpp  crash.h
tapm-breakpad/src/main/java/com/tans/tapm/breakpad/: BreakpadNativeCrashMonitor.kt
tapm-breakpad/src/main/java/com/tans/tapm/breakpad/model/: BreakpadNativeCrash.kt
tapm-breakpad/src/test/java/com/tans/tlog/breakpad/: ExampleUnitTest.kt
tapm-core/: build.gradle.kts
tapm-core/src/androidTest/java/com/tans/tapm/: ExampleInstrumentedTest.kt
tapm-core/src/main/cpp/: CMakeLists.txt  jni.cpp  tapm_addr.h  tapm_log.h  tapm_size.h
tapm-core/src/main/cpp/anr/: anr.cpp  anr.h
tapm-core/src/main/cpp/crash/: crash.cpp  crash.h  crash_writer.cpp  crash_writer.h  file_mmap.cpp  file_mmap.h  memory_maps.cpp  memory_maps.h  process_read.cpp  process_read.h  t_elf.cpp  t_elf.h  t_regs.cpp  t_regs.h  t_unwind.cpp  t_unwind.h  thread_control.cpp  thread_control.h
tapm-core/src/main/cpp/linkedlist/: linked_list.cpp  linked_list.h
tapm-core/src/main/cpp/thread/: tapm_thread.cpp  tapm_thread.h
tapm-core/src/main/cpp/time/: tapm_time.cpp  tapm_time.h
tapm-core/src/main/cpp/unwind/: config.h  libunwind-common.h  libunwind-ptrace.h
tapm-core/src/main/cpp/unwindstack/: CMakeLists.txt
tapm-core/src/main/cpp/xhook/: xh_util.c
tapm-core/src/main/java/com/tans/tapm/: CpuStateSnapshotCapture.kt  Executor.kt  Monitor.kt  PowerProfile.kt  Utils.kt  tApm.kt
tapm-core/src/main/java/com/tans/tapm/chipset/: Chipset.kt  ChipsetSeries.kt  ChipsetUtils.kt  ChipsetVendor.kt
tapm-core/src/main/java/com/tans/tapm/internal/: Utils.kt
tapm-core/src/main/java/com/tans/tapm/model/: Anr.kt  CpuPowerCost.kt  CpuUsage.kt  DeviceInfo.kt  ForegroundScreenPowerCost.kt  HttpRequest.kt  JavaCrash.kt  MainThreadLag.kt  MemoryUsage.kt  NativeCrash.kt
tapm-core/src/main/java/com/tans/tapm/monitors/: AbsMonitor.kt  AnrMonitor.kt  CpuPowerCostMonitor.kt  CpuUsageMonitor.kt  ForegroundScreenPowerCostMonitor.kt  HttpRequestMonitor.kt  JavaCrashMonitor.kt  MainThreadLagMonitor.kt  MemoryUsageMonitor.kt  NativeCrashMonitor.kt
tapm-core/src/test/java/com/tans/tapm/: PowerCalculateTest.kt
tapm-log/: build.gradle.kts
tapm-log/src/androidTest/java/com/tans/tapm/log/: ExampleInstrumentedTest.kt
tapm-log/src/main/: AndroidManifest.xml
tapm-log/src/main/java/com/tans/tapm/log/: AnrLogObserver.kt  CpuPowerCostLogObserver.kt  CpuUsageLogObserver.kt  ForegroundScreenPowerCostLogObserver.kt  HttpRequestLogObserver.kt  JavaCrashLogObserver.kt  MainThreadLagLogObserver.kt  MemoryUsageLogObserver.kt  NativeCrashLogObserver.kt  tApmLogAutoInit.kt  tApmLogs.kt
tapm-log/src/test/java/com/tans/tapm/log/: ExampleUnitTest.kt
tapm/src/main/java/com/tans/tapm/: AppLifecycleOwner.kt  Executor.kt  Executors.kt  InitCallback.kt  Monitor.kt  MonitorCallback.kt  PowerProfile.kt  tApm.kt
tapm/src/main/java/com/tans/tapm/internal/: AppLifecycleOwner.kt  ComponentProfile.kt  CpuStateSnapshotCapture.kt  Executors.kt  PowerProfile.kt  Utils.kt  tApmLog.kt
tapm/src/main/java/com/tans/tapm/internal/monitors/: AbsMonitor.kt  CpuPowerCostMonitor.kt  CpuUsageMonitor.kt  ForegroundScreenPowerCostMonitor.kt  Monitor.kt
tapm/src/main/java/com/tans/tapm/model/: CpuPowerCost.kt  CpuUsage.kt  DeviceInfo.kt  ForegroundScreenPowerCost.kt  JavaCrash.kt
tapm/src/main/java/com/tans/tapm/monitors/: AbsMonitor.kt  CpuPowerCostMonitor.kt  CpuUsageMonitor.kt  ForegroundScreenPowerCostMonitor.kt  JavaCrashMonitor.kt
tapm/src/test/java/com/tans/tapm/: ExampleUnitTest.kt
tpowercalculator/: build.gradle.kts
tpowercalculator/src/androidTest/java/com/tans/tpowercalculator/: ExampleInstrumentedTest.kt
tpowercalculator/src/main/java/com/tans/tpowercalculator/: Callback.kt  MonitorCallback.kt  SimpleCallback.kt  tPowerCalculator.kt
tpowercalculator/src/main/java/com/tans/tpowercalculator/internal/: ComponentProfile.kt  CpuStateSnapshotCapture.kt  CpuUsageMonitor.kt  Executors.kt  PowerProfile.kt  Utils.kt  tPowerLog.kt
tpowercalculator/src/main/java/com/tans/tpowercalculator/internal/monitors/: AbsMonitor.kt  CpuPowerCostMonitor.kt  CpuUsageMonitor.kt  Monitor.kt
tpowercalculator/src/main/java/com/tans/tpowercalculator/model/: CpuPowerCost.kt  CpuUsage.kt
tpowercalculator/src/test/java/com/tans/tpowercalculator/: ExampleUnitTest.kt  PowerCalculateTest.kt
